# OOP2025LAB6

./: CMakeLists.txt  Readme.md
data/: test_npcs.txt
src/: main.cpp
src/factory/: npc_factory.cpp  npc_factory.h
src/manager/: npc_manager.cpp  npc_manager.h
src/npc/: bandit.cpp  bandit.h  bear.cpp  bear.h  npc.cpp  npc.h  werewolf.cpp  werewolf.h
src/observer/: console_observer.cpp  file_observer.cpp
src/visitor/: battle_visitor.cpp  battle_visitor.h
tests/: test_battle.cpp  test_factory.cpp  test_npc.cpp
